1.Made the Navbar stick to the top.  2.Fixed the navbar alignment issue  3.Added some effect for the Navbar

--- a/src/components/css/home.css
+++ b/src/components/css/home.css
@@ -1,5 +1,5 @@
 .content-wrapper {
-  padding: 8px;
+  padding: 70px;
 }
 
 #bodyhead {
