--- a/src/components/css/popup.css
+++ b/src/components/css/popup.css
@@ -23,8 +23,8 @@
     rgb(60, 55, 106) 8.5%,
     rgb(23, 20, 69) 82.4%
   );
-  padding: 50px;
-  border-radius: 10px;
+  padding: 30px;
+  border-radius: 35px;
   box-shadow: 0px 0px 90px rgba(0, 0, 0, 0.2);
   z-index: 1001; /* Ensure it's on top of the overlay */
 }
@@ -34,7 +34,7 @@
 }
 
 .popup button {
-  margin: 5px;
+  margin: 10px;
 }
 h2 {
   color: antiquewhite;
@@ -74,7 +74,7 @@ h2 {
   transition-duration: 0.1s;
 }
 
-.close-button {
+/* .close-button {
   background-image: linear-gradient(
     92.88deg,
     #455eb5 9.16%,
@@ -104,8 +104,8 @@ h2 {
 
 .close-button:hover {
   box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
-  transition-duration: 0.1s;
-}
+  transition-duration: 0.5s;
+} */
 
 @media (min-width: 768px) {
   .button-36 {
@@ -115,6 +115,7 @@ h2 {
 
 h2 {
   text-align: center;
+  padding-bottom: 10px;
 }
 
 .button-image {
